--- a/css/styles1.css
+++ b/css/styles1.css
@@ -1,14 +1,15 @@
-P{
-    font-weight: bold
+/* Style definition for paragraphs */
+p {
+    font-weight: bold;
 }
 
-#top{
+/* Style definition for the top heading */
+#top {
     text-decoration: wavy;
-
 }
 
-body{
-
+/* Style definition for the body */
+body {
     background-color: rgb(255, 228, 204);
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
@@ -16,40 +17,68 @@ body{
     margin: 40px;
     padding: 100px;
 }
+
+/* Style definition for centered lists */
 .center-list {
     list-style-position: inside;
     text-align: center;
 }
+
 .center-list li {
     text-align: left;
 }
 
+/* Style definition for content container */
 .content {
     display: flex;
 }
 
+/* Style definition for text content */
 .text {
     flex: 1;
 }
 
+/* Style definition for media content */
 .media {
     flex: 1;
     text-align: center;
 }
 
-h1{
+/* Style definition for h1 heading */
+h1 {
     color: slategrey;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
 }
 
-ol{
+/* Style definition for ordered lists */
+ol {
     color: black;
     font-family: 'Times New Roman', Times, serif;
     font-size: medium;
     font-weight: bolder;
 }
 
-ul{
+/* Style definition for unordered lists */
+ul {
     font-weight: 500;
+}
+
+/* Style definition for the tableauPlaceholder div */
+.tableauPlaceholder {
+    position: relative;
+    width: 100%;
+    overflow: auto;
+    margin: 20px auto; /* Add margin for spacing */
+    max-width: 800px; /* Limit maximum width of the visualization */
+    text-align: center; /* Center-align content */
+}
+.positioned-div {
+    position: absolute;
+    top: 100px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgb(255, 251, 190);
+    padding: 5px;
+    border-radius: 5px;
 }
